Messagerie + fix tout le xml qui a été ruiné

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,86 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout2"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:contentDescription="Indentifiant"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="95dp"
         android:layout_marginTop="103dp"
-        android:layout_marginEnd="90dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="577dp"
+        android:contentDescription="Se connecter à l'application Movinder"
         android:text="Se connecter"
         android:textAlignment="center"
         android:textColor="#7f00ff"
         android:textSize="100px"
-        android:contentDescription="Se connecter à l'application Movinder"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/userLogin"
         android:layout_width="289dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="82dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="66dp"
         android:layout_marginTop="250dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="436dp"
         android:contentDescription="Saisissez votre identifiant Movinder"
         android:drawablePadding="5dp"
         android:focusable="true"
         android:gravity="start"
+        android:hint="Identifiant"
         android:importantForAccessibility="yes"
         android:inputType="text"
         android:nextFocusDown="@id/userPassword"
-        android:textCursorDrawable="@null" />
+        android:textCursorDrawable="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/userPassword"
         android:layout_width="244dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="128dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="84dp"
         android:layout_marginTop="320dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginEnd="83dp"
+        android:layout_marginBottom="366dp"
         android:contentDescription="Saisissez votre mot de passe Movinder"
-        android:importantForAccessibility="yes"
         android:drawablePadding="5dp"
         android:gravity="start"
+        android:hint="Mot de passe"
+        android:importantForAccessibility="yes"
         android:inputType="textPassword"
         android:nextFocusUp="@id/userLogin"
         android:nextFocusDown="@id/login"
-        android:textCursorDrawable="@null" />
+        android:textCursorDrawable="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/toggle_view1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="330dp"
         android:layout_marginStart="330dp"
+        android:layout_marginTop="330dp"
+        android:clickable="true"
         android:scaleType="centerCrop"
-        android:clickable="true" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/login"
-        android:layout_width="263dp"
+        android:layout_width="285dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/userPassword"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="126dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="453dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="230dp"
         android:contentDescription="Se connecter à l'application Movinder"
         android:gravity="center"
         android:importantForAccessibility="yes"
@@ -90,57 +98,31 @@
         android:text="SE CONNECTER"
         android:textAllCaps="false"
         android:textColor="#FFF"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/register1"
         android:layout_width="wrap_content"
         android:layout_height="23dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="94dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="600dp"
-        android:layout_marginEnd="85dp"
-        android:layout_marginBottom="103dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="525dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="183dp"
         android:contentDescription="Si vous n'avez pas de compte, appuyez sur ce lien pour en créer un"
-        android:nextFocusUp="@id/login"
         android:fontFamily="sans-serif"
         android:importantForAccessibility="yes"
+        android:nextFocusUp="@id/login"
         android:onClick="goToRegister"
         android:text="Vous n'avez pas de compte ? Créez-le"
         android:textColor="#7f00ff"
-        android:textSize="12dp" />
+        android:textSize="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/lbLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="264dp"
-        android:layout_marginEnd="315dp"
-        android:layout_marginBottom="448dp"
-        android:labelFor="@id/userLogin"
-        android:text="Login :" />
-
-    <TextView
-        android:id="@+id/lbMdp"
-        android:layout_width="183dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="333dp"
-        android:layout_marginEnd="193dp"
-        android:layout_marginBottom="379dp"
-        android:labelFor="@id/userPassword"
-        android:text="Mot de passe :" />
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
