--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -10,30 +10,27 @@
         android:id="@+id/btJamaisVu"
         android:layout_width="108dp"
         android:layout_height="61dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="91dp"
+        android:layout_marginStart="151dp"
+        android:layout_marginTop="523dp"
+        android:layout_marginEnd="152dp"
+        android:layout_marginBottom="147dp"
+        android:onClick="notSeenMovie"
         android:text="jamais vu"
-        android:importantForAccessibility="yes"
-        app:layout_constraintBottom_toTopOf="@+id/btMatch"
-        app:layout_constraintEnd_toStartOf="@+id/btJaime"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toEndOf="@+id/btJaimePas"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageViewFilm"
         android:layout_width="373dp"
         android:layout_height="447dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="19dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="246dp"
         android:contentDescription="affiche_film"
-        android:nextFocusLeft="@id/btJaimePas"
-        android:nextFocusRight="@id/btJaime"
-        android:importantForAccessibility="yes"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -44,78 +41,72 @@
         android:layout_width="116dp"
         android:layout_height="61dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="204dp"
+        android:layout_marginTop="609dp"
+        android:layout_marginEnd="279dp"
+        android:layout_marginBottom="61dp"
         android:onClick="goToMessage"
         android:text="Messages"
-        android:importantForAccessibility="yes"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btMatch"
         android:layout_width="108dp"
         android:layout_height="61dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="204dp"
-        android:layout_marginEnd="35dp"
+        android:layout_marginStart="151dp"
+        android:layout_marginTop="609dp"
+        android:layout_marginEnd="152dp"
+        android:layout_marginBottom="61dp"
         android:text="Match"
-        android:nextFocusRight="@id/btStats"
-        android:nextFocusLeft="@id/btMessages"
-        android:importantForAccessibility="yes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btStats"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toEndOf="@+id/btMessages"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/btStats"
-        android:layout_width="108dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="204dp"
-        android:layout_marginEnd="16dp"
-        android:text="Stats"
-        android:importantForAccessibility="yes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button12"
+        android:layout_width="108dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="287dp"
+        android:layout_marginTop="609dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="61dp"
+        android:text="Stats"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btJaimePas"
         android:layout_width="108dp"
         android:layout_height="61dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginBottom="91dp"
+        android:layout_marginTop="523dp"
+        android:layout_marginEnd="287dp"
+        android:layout_marginBottom="147dp"
         android:onClick="dontLikeMovie"
         android:text="j'aime pas"
-        android:nextFocusRight="@id/btJamaisVu"
-        android:nextFocusDown="@id/btMessages"
-        android:importantForAccessibility="yes"
-        app:layout_constraintBottom_toTopOf="@+id/btMessages"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btJaime"
         android:layout_width="108dp"
         android:layout_height="61dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginStart="287dp"
+        android:layout_marginTop="523dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="89dp"
+        android:layout_marginBottom="147dp"
         android:onClick="likeMovie"
         android:text="j'aime"
-        android:nextFocusLeft="@id/btJamaisVu"
-        android:nextFocusDown="@id/btStats"
-        android:importantForAccessibility="yes"
-        app:layout_constraintBottom_toTopOf="@+id/btStats"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
