--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,58 +7,33 @@
     android:layout_height="fill_parent"
     tools:context=".Register">
 
-    <TextView
-        android:id="@+id/lbNom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nom :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.279" />
-
-    <TextView
-        android:id="@+id/lbSexe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sexe :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.55" />
-
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="285dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="518dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="168dp"
+        android:layout_width="297dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="521dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="158dp"
         android:contentDescription="Renseignez votre numéro de téléphone"
         android:ems="10"
+        android:hint="Phone"
         android:importantForAccessibility="yes"
         android:inputType="phone"
         android:nextFocusUp="@id/idTextOrientation"
         android:nextFocusDown="@id/register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.566"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.571" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="129dp"
+        android:layout_marginStart="126dp"
         android:layout_marginTop="94dp"
-        android:layout_marginEnd="124dp"
+        android:layout_marginEnd="131dp"
         android:layout_marginBottom="586dp"
         android:contentDescription="S'inscrire sur l'application Movinder"
         android:text="S'inscrire"
@@ -74,13 +49,14 @@
         android:id="@+id/editTextMail"
         android:layout_width="300dp"
         android:layout_height="38dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="248dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="438dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="253dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="440dp"
         android:contentDescription="Créez votre identifiant de connexion"
         android:drawablePadding="5dp"
         android:gravity="start"
+        android:hint="Mail"
         android:importantForAccessibility="yes"
         android:inputType="text"
         android:nextFocusUp="@id/editTextNom"
@@ -88,22 +64,21 @@
         android:textCursorDrawable="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.633"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.714" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextMdp"
-        android:layout_width="250dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="55dp"
+        android:layout_width="298dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="54dp"
         android:layout_marginTop="312dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="374dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="382dp"
         android:contentDescription="Créez votre mot de passe de connexion"
         android:drawablePadding="5dp"
         android:gravity="start"
+        android:hint="Mot de passe"
         android:importantForAccessibility="yes"
         android:inputType="textPassword"
         android:nextFocusUp="@id/editTextMail"
@@ -111,10 +86,8 @@
         android:textCursorDrawable="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.931"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/toggle_view2"
@@ -131,13 +104,14 @@
         android:id="@+id/editTextSexe"
         android:layout_width="300dp"
         android:layout_height="38dp"
-        android:layout_marginStart="43dp"
+        android:layout_marginStart="54dp"
         android:layout_marginTop="380dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="306dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="313dp"
         android:contentDescription="Renseignez votre adresse mail"
         android:drawablePadding="5dp"
         android:gravity="start"
+        android:hint="Sexe"
         android:importantForAccessibility="yes"
         android:inputType="textEmailAddress"
         android:nextFocusUp="@id/editTextMdp"
@@ -145,31 +119,28 @@
         android:textCursorDrawable="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/idTextOrientation"
-        android:layout_width="260dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="297dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="54dp"
         android:layout_marginTop="450dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="236dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="235dp"
         android:contentDescription="Orientation"
         android:ems="10"
+        android:hint="Orientation"
         android:importantForAccessibility="yes"
         android:inputType="text"
         android:nextFocusUp="@id/editTextSexe"
         android:nextFocusDown="@id/editTextPhone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.842"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/register"
@@ -180,9 +151,9 @@
         android:layout_marginEnd="76dp"
         android:layout_marginBottom="69dp"
         android:contentDescription="Bouton pour valider son inscription"
+        android:gravity="center"
         android:importantForAccessibility="yes"
         android:nextFocusUp="@id/editTextPhone"
-        android:gravity="center"
         android:onClick="toRegister"
         android:text="Je m'inscris"
         android:textAllCaps="false"
@@ -197,69 +168,21 @@
         android:id="@+id/editTextNom"
         android:layout_width="300dp"
         android:layout_height="38dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="186dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="500dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="509dp"
         android:contentDescription="Renseignez votre nom"
         android:ems="10"
         android:focusable="true"
+        android:hint="Nom"
         android:importantForAccessibility="yes"
         android:inputType="textPersonName"
         android:nextFocusDown="@id/editTextMail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.607"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.714" />
-
-    <TextView
-        android:id="@+id/lbOrientation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Orientation :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.643" />
-
-    <TextView
-        android:id="@+id/lbPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Phone :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.744" />
-
-    <TextView
-        android:id="@+id/lbMail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mail :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.366" />
-
-    <TextView
-        android:id="@+id/lbPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mot de passe :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.453" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
