--- a/app/src/main/res/layout/activity_le_match.xml
+++ b/app/src/main/res/layout/activity_le_match.xml
@@ -4,5 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MatchResultView">
+    tools:context=".LeMatch">
+
+    <LinearLayout
+        android:id="@+id/linear_layout_match"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
