--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -59,6 +59,7 @@
         android:layout_marginTop="609dp"
         android:layout_marginEnd="152dp"
         android:layout_marginBottom="61dp"
+        android:onClick="goToMatch"
         android:text="Match"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
